@@ -2,6 +2,7 @@ V1.0 :
     - init
 V1.1 :
     - Introduced Excel mode for output :
+        - usage : lathe.interpret(line, excel_mode = True) and lathe.save_csv_data(excel_mode=True) (considering lathe = FanucLathe())
         - structure of a line in the new output : [Goperation, tool, Diameter, Vc, N, f, Vf (speed), distance, time, line number in code]
         - Vf and time are calculated from other params and formated for escel so time and Vf does NOT apear in clear when not opend in a spreadsheet.
         - if Vf is set in the code to be in mm/min and not mm/rev, Vc, N, and f will be set to zero in the line as it will NOT change Vf
@@ -10,5 +11,7 @@ V1.1 :
         - G71 / G72 : all parameters 0 execpt Vf (needs improvement later)
         - G74 : all parameters 0 execpt Vf (needs improvement later)
         - G76 : all parameters 0 execpt Vf (needs improvement later)
+        - globally, is set to 0 all params that do NOT have impact on the program
     - Standard output mode :
         - line number in now at the end of the line
+    -added an integrated method to make a CSV file
